# factorio-patch-prediction

./: .dockerignore  .gitignore  DEMO.md  LICENSE  README.md  pyproject.toml
cloud/: Dockerfile  README.md  entrypoint.sh  modal_train.py  run_local_gpu.sh
data/: seed_urls.txt
docs/: autoresearch.md  findings.md  report_native_2.0.md
scripts/: autoresearch.py  build_corpus.py  build_html_demo.py  build_report.py  demo.py  fbsr.sh  fbsr_service.sh  finalize_autoresearch.py  make_tiny_dataset.py  plot_autoresearch.py  render_eval.py  render_fle.py  render_predictions.py  train_tiny.py
src/factorio_patches/: __init__.py  blueprint_decode.py  blueprint_extract.py  dataset.py  dedup.py  download_factoriobin.py  download_factorioprints.py  ensemble.py  eval.py  metrics.py  model.py  rasterize.py  render.py  sprites.py  symmetry.py  train.py  vocab.py
tests/: test_blueprint_decode.py  test_masking.py  test_rasterize.py
