[project]
name = "factorio-patches"
version = "0.1.0"
description = "Proof-of-concept: Factorio blueprint patch inpainting (mask a region, predict the entities inside)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "factorio-patch-poc" }]
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factorio_patches"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
